--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Formatting</title>
 </head>
-<body>Hello World
+<body> 
+<h1>Title</h1>
+<h2>Subtitle</h2>
+<p>
+  <em>Hello World</em>
+  <strong>Warning!</strong>
+</p>
+
+
+<p>Hello Moon</p>
+
+
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
