Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body> 
 <h1>Title</h1>
 <h2>Subtitle</h2>
+<h3>Caption</h3>
 <p>
   <em>Hello World</em>
   <strong>Warning!</strong>
 </p>
-
-
 <p>Hello Moon</p>
 
 
